--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
+@layer components {
+  html {
+    scroll-behavior: smooth;
+  }
+  .containering {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+  }
+  .containering::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+  }
+}
 @tailwind utilities;
